0.03
 [PYX]
 - Fix SEE ALSO section to reality.

0.02 2015-01-18T17:24:28+01:00
 [Common]
 - Fix minimal version of Perl.
 - Improve AUTHOR and LICENSE AND COPYRIGHT sections in doc.
 - Update copyright years.

 [PYX]
 - REWRITE API: Rename start_tag() subroutine to start_element().
 - REWRITE API: Rename end_tag() subroutine to end_element().

 [PYX::Parser]
 - REWRITE API: Rewrite raw constructor parameters to 'callbacks' hash
   reference.
 - REWRITE API: Rewrite 'start_tag' to 'start_element' callback.
 - REWRITE API: Rewrite 'end_tag' to 'end_element' callback.
 - Add 'non_parser_options' parameter.
 - Add error check for 'output_handler' parameter.
 - Add test comments for parse_file() method.
 - Fix SYNOPSIS section in doc.
 - Fix check for $out variable in parse(), parse_file() and parse_handler()
   methods.
 - Rename 'line' parameter to internal name '_line'.
 - Rename test to right name (parse -> parse_file).

0.01 2014-11-18T07:30:12+01:00
 - First version.