@@ -387,7 +387,11 @@ L<Error::Pure>.
 =head1 SEE ALSO
 
 L<PYX>,
-L<PYX::Utils>.
+L<PYX::GraphViz>,
+L<PYX::Hist>,
+L<PYX::Stack>,
+L<PYX::Utils>,
+L<Task::PYX>.
 
 =head1 AUTHOR
 
