@@ -2,6 +2,9 @@
  [PYX]
  - Fix SEE ALSO section to reality.
 
+ [PYX::Parser]
+ - Fix SEE ALSO section to reality.
+
 0.02 2015-01-18T17:24:28+01:00
  [Common]
  - Fix minimal version of Perl.
